@@ -1,3 +1,8 @@
+2011-10-11  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* message.el (message-signed-or-encrypted-p): Exclude header when
+	checking if there is signed or encrypted body in text/plain message.
+
 2011-10-09  Andreas Schwab  <schwab@linux-m68k.org>
 
 	* html2text.el (html2text-get-attr): Correctly handle attribute values
